add get book handler
